# MetaTrader5-Python

./: README.md  __init__.py  _core.cp39-win_amd64.pyd  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
src/PythonMetaTrader5/: __init__.py
src/PythonMetaTrader5.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
